Updated sample
Updated sample